--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "This is react tutorial",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -24,7 +26,6 @@
     "react-dom": "^18.2.0"
   },
   "browserslist": [
-    "last 2 Chrome version",
-    "last 2 Firefox version"
+    "last 2 version"
   ]
 }
